gitops/apps/media/readmebook/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readmebook-http
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`readmebook.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: readmebook
          port: 3030
      middlewares:
        - name: redirect-to-https
          namespace: media
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readmebook-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readmebook.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: readmebook
          port: 3030
  tls: {}
